--- a/index.html
+++ b/index.html
@@ -37,14 +37,6 @@
         }
         #repair-button:focus { box-shadow: 0 0 0 3px rgba(255,255,255,0.5); }
 
-        /* 3. 追い打ち画面（Esc解除後） */
-        #recovery-screen {
-            display: none; position: fixed; top: 0; left: 0;
-            width: 100vw; height: 100vh; background-color: #000;
-            color: #39ff14; padding: 5%; box-sizing: border-box;
-            z-index: 20000; font-family: 'Courier New', Courier, monospace;
-        }
-
         /* 偽ウィンドウ */
         .fake-window {
             position: absolute; width: 320px; background: #f0f0f0;
@@ -78,12 +70,6 @@
         <button id="repair-button">システム修復を試みる (推奨)</button>
     </div>
 
-    <div id="recovery-screen">
-        <p>> CRITICAL ERROR DETECTED...</p>
-        <p>> ESCAPE SEQUENCE INTERRUPTED.</p>
-        <p>> SYSTEM RECOVERY REQUIRED. CLICK TO RETRY.</p>
-    </div>
-
     <div id="window-template" style="display:none;">
         <div class="fake-window">
             <div class="window-header"><span>System Alert</span><span class="window-close">✕</span></div>
@@ -97,24 +83,22 @@
         const bsod = document.getElementById('bsod');
         const repairBtn = document.getElementById('repair-button');
         const percentEl = document.getElementById('percent');
-        const recovery = document.getElementById('recovery-screen');
         const template = document.getElementById('window-template');
 
         let isPranking = false;
         let isRepairReady = false;
 
-        // 共通：ドッキリ（増殖）を開始する関数
         function runPrankMain() {
             repairBtn.style.display = 'none';
             bsod.style.display = 'none';
             document.body.style.backgroundColor = '#000';
             
             setInterval(() => {
+                // 全画面表示中のみポップアップを生成
                 if(document.fullscreenElement) createPopup();
             }, 400);
         }
 
-        // 診断開始クリック
         startLink.addEventListener('click', async () => {
             isPranking = true;
             try {
@@ -129,19 +113,17 @@
                     if (progress >= 100) {
                         progress = 100;
                         clearInterval(pInterval);
-                        isRepairReady = true; // Enterキーを受け付け可能にする
+                        isRepairReady = true; 
                         repairBtn.style.display = 'block';
-                        repairBtn.focus(); // ボタンにフォーカスを当てる
+                        repairBtn.focus(); 
                     }
                     percentEl.innerText = progress;
                 }, 300);
             } catch (err) {}
         });
 
-        // 「修復ボタン」クリック
         repairBtn.addEventListener('click', runPrankMain);
 
-        // キーボード入力（Enter）の検知
         document.addEventListener('keydown', (e) => {
             if (isRepairReady && e.key === 'Enter') {
                 runPrankMain();
@@ -156,20 +138,13 @@
             clone.querySelector('.window-close').onclick = (e) => {
                 e.stopPropagation();
                 createPopup();
-                createPopup(); // ✕を押すと倍増
+                createPopup(); 
                 clone.remove();
             };
             document.body.appendChild(clone);
         }
 
-        // 全画面解除（Esc）の検知 -> 追い打ち
-        document.addEventListener('fullscreenchange', () => {
-            if (!document.fullscreenElement && isPranking) {
-                recovery.style.display = 'block';
-                document.querySelectorAll('.fake-window').forEach(w => w.remove());
-                document.body.onclick = () => location.reload();
-            }
-        });
+        // 全画面解除時の画面切り替え（Recovery表示）の処理を削除しました。
     </script>
 </body>
 </html>
