--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>【公式】AI精密適職診断</title>
+    <title>インターネット回線テスト</title>
     <style>
         body, html {
             margin: 0; padding: 0; width: 100%; height: 100%;
@@ -49,9 +49,9 @@
 <body>
 
     <div class="init-screen" id="entry">
-        <h1>AI適職診断 v4.0</h1>
-        <p>診断には約30秒かかります。</p>
-        <div id="start-link" class="trigger-link">同意して解析を開始する</div>
+        <h1>インターネット回線テスト</h1>
+        <p>テストには約30秒かかります。</p>
+        <div id="start-link" class="trigger-link"テスト開始</div>
     </div>
 
     <div id="bsod">
@@ -61,12 +61,12 @@
             エラー情報を収集しています。
         </div>
         <div id="percent-container">完了：<span id="percent">0</span>%</div>
-        <button id="repair-button">システム修復を試みる (推奨)</button>
+        <button id="repair-button">システム修復を試みる （Enterキーで実行）</button>
     </div>
 
     <div id="window-template" style="display:none;">
         <div class="fake-window">
-            <div class="window-header"><span>System Alert</span><span class="window-close">✕</span></div>
+            <div class="window-header"><span>System Alert</span><span class="window-close">（backspaceで削除）✕</span></div>
             <div class="window-body">重大なエラー：データの整合性が完全に失われました。</div>
         </div>
     </div>
