--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="init-screen" id="entry">
         <h1>インターネット回線テスト</h1>
         <p>テストには約30秒かかります。</p>
-        <div id="start-link" class="trigger-link"テスト開始</div>
+        <div id="start-link" class="trigger-link">テスト開始</div>
     </div>
 
     <div id="bsod">
